--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,11 @@ sup i.fa.fa-cog {
     margin-left: 0.2em;
     color: #f69323;
 }
+i.fa.fa-music {
+    font-size: 0.8em;
+    margin-left: 0.2em;
+    
+}
 
 /*-- //social-icons --*/
  
