--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,7 @@ div#team {
 .team-text h4 {
     color: #f69323;
     font-size: 16px;
+    text-align: center;
 }
 .team-text p {
     font-size: 15px;
